Update project files (.env.example, README.md, etc.)

--- a/.env.docker
+++ b/.env.docker
@@ -7,9 +7,12 @@ JWT_SECRET_KEY=omnipos-jwt-secret-key-change-this-in-production-min-32-chars
 HTTP_PORT=:8081
 
 # gRPC Service Addresses (Docker service names)
+# gRPC Service Addresses (Docker service names)
 USER_GRPC_ADDR=user-service:8080
-# PRODUCT_GRPC_ADDR=product-service:50052
-# ORDER_GRPC_ADDR=order-service:50053
+PRODUCT_GRPC_ADDR=product-service:8082
+ORDER_GRPC_ADDR=order-service:8083
+
+# JWT Secret (must match authentication service)
 
 # Logger Configuration
 LOG_LEVEL=info
